# ChessVLM-backend

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  setup.yml
api/: consumers.py  routing.py  urls.py  views.py
app/: main.py
app/api/: healthcheck.py  routers.py  socket.py
app/core/: config.py
app/schema/: server.py
app/services/bot/: chessllm.py
app/tests/: test_websocket.py
backend/: asgi.py  routing.py  settings.py  urls.py
bot/: chessllm.py  constants.py  test.ipynb
chessllm-service/docs/: architecture.md
docs/: architecture.md
llm/: chessllm.py  test.ipynb
