[project]
name = "chessvlm-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "chess>=1.11.2",
    "fastapi[standard]>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-huggingface>=0.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
